openshift-enterprise/aws/OpenShift-1B1BSN2N.yaml
HeatTemplateFormatVersion: '2012-12-12'
Description: Template for setting up an OpenShift Origin environment
Parameters:
  KeyName: {Description: Name of an existing EC2 KeyPair
      to enable SSH access to the instances, Type: String, MinLength: '1',
    MaxLength: '64', AllowedPattern: '[-_ a-zA-Z0-9]*'}
  Prefix: {Description: Your DNS Prefix, Type: String,
    Default: novalocal}
  UpstreamDNS: {Description: Upstream DNS server,
    Type: String, Default: 8.8.8.8}
  ConfInstallMethod: {Description: Installation method (yum rhsm rhn), Type: String, MinLength: '1',
    MaxLength: '255', Default: yum, Allowed_Values: [yum, rhsm, rhn]}
  ConfSMRegName: {Description: Subscription Manager registration username, Type: String, MinLength: '1',
    MaxLength: '255', Default: username}
  ConfSMRegPass: {Description: Subscription Manager registration password, Type: String, MinLength: '1',
    MaxLength: '255', Default: password}
  ConfSMRegPool: {Description: Pool ID for OpenShift subscription, Type: String, MinLength: '1',
    MaxLength: '255', Default: none}
  ConfRHNRegName: {Description: RHN registration username, Type: String, MinLength: '1',
    MaxLength: '255', Default: username}
  ConfRHNRegPass: {Description: RHN registration password, Type: String, MinLength: '1',
    MaxLength: '255', Default: password}
  ConfRHNRegAK: {Description: RHN activation key for OpenShift subscription, Type: String, MinLength: '1',
    MaxLength: '255', Default: activationkey}
  ConfRHELRepoBase: {Description: RHEL Repo Base, Type: String, MinLength: '1',
    MaxLength: '255', Default: example.com}
  ConfRepoBase: {Description: OSE Repo Base, Type: String, MinLength: '1',
    MaxLength: '255', Default: example.com}
  ConfJBossRepoBase: {Description: JBoss Repo Base, Type: String, MinLength: '1',
    MaxLength: '255', Default: example.com}
  BrokerHostname: {Description: Broker hostname, Type: String, MinLenth: '1', Default: openshift.brokerinstance.novalocal}
  BSNHostname: {Description: BSN hostname, Type: String, MinLenth: '1', Default: openshift.bsninstance.novalocal}
  Node1Hostname: {Description: Node1 hostname, Type: String, MinLenth: '1', Default: openshift.node1instance.novalocal}
  Node2Hostname: {Description: Node2 hostname, Type: String, MinLenth: '1', Default: openshift.node2instance.novalocal}
Mappings:
  JeosImages:
    Broker: {Image: RHEL64-x86_64-broker}
    Node: {Image: RHEL64-x86_64-node}
Resources:
  OpenShiftEnterpriseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Standard firewall rules
      SecurityGroupIngress:
      - {IpProtocol: udp, FromPort: '53', ToPort: '53',
        CidrIp: 0.0.0.0/0}
      - {IpProtocol: tcp, FromPort: '53', ToPort: '53',
        CidrIp: 0.0.0.0/0}
      - {IpProtocol: tcp, FromPort: '22', ToPort: '22',
        CidrIp: 0.0.0.0/0}
      - {IpProtocol: tcp, FromPort: '80', ToPort: '80',
        CidrIp: 0.0.0.0/0}
      - {IpProtocol: tcp, FromPort: '443', ToPort: '443',
        CidrIp: 0.0.0.0/0}
      - {IpProtocol: tcp, FromPort: '8000', ToPort: '8000',
        CidrIp: 0.0.0.0/0}
      - {IpProtocol: tcp, FromPort: '23', ToPort: '65535',
        CidrIp: 0.0.0.0/0}
      - {IpProtocol: icmp, FromPort: '-1', ToPort: '-1',
        CidrIp: 0.0.0.0/0}
  BrokerIPAddress: {Type: 'AWS::EC2::EIP'}
  BrokerIPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: {Ref: BrokerInstance}
      EIP: {Ref: BrokerIPAddress}
  BrokerInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Fn::FindInMap: [JeosImages, Broker, Image]
      InstanceType: m1.small
      KeyName: {Ref: KeyName}
      SecurityGroups:
      - {Ref: OpenShiftEnterpriseSecurityGroup}
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - '-'
          - - openshift
            - {Ref: Prefix}
            - broker
      UserData:
        Fn::Base64:
          Fn::Join:
          - ''
          - - '#!/bin/bash -x'
            - '

              '
            - export CONF_BROKER_IP_ADDR=
            - {Ref: BrokerIPAddress}
            - '

              '
            - export CONF_NAMED_IP_ADDR=
            - {Ref: BSNIPAddress}
            - '

              '
            - export CONF_DOMAIN=
            - {Ref: Prefix}
            - '

              '
            - export CONF_BROKER_HOSTNAME=
            - {Ref: BrokerHostname}
            - '

              '
            - export CONF_NAMED_HOSTNAME=
            - {Ref: BSNHostname}
            - '

              '
            - export CONF_ACTIVEMQ_HOSTNAME=
            - {Ref: BSNHostname}
            - '

              '
            - export CONF_DATASTORE_HOSTNAME=
            - {Ref: BSNHostname}
            - '

              '
            - export PREFIX=
            - {Ref: Prefix}
            - '

              '
            - export CONF_INSTALL_METHOD=
            - {Ref: ConfInstallMethod}
            - '

              '
            - export CONF_SM_REG_NAME=
            - {Ref: ConfSMRegName}
            - '

              '
            - export CONF_SM_REG_PASS=
            - {Ref: ConfSMRegPass}
            - '

              '
            - export CONF_SM_REG_POOL=
            - {Ref: ConfSMRegPool}
            - '

              '
            - export CONF_RHN_REG_NAME=
            - {Ref: ConfRHNRegName}
            - '

              '
            - export CONF_RHN_REG_PASS=
            - {Ref: ConfRHNRegPass}
            - '

              '
            - export CONF_RHN_REG_ACTKEY=
            - {Ref: ConfRHNRegAK}
            - '

              '
            - export CONF_REPOS_BASE=
            - {Ref: ConfRepoBase}
            - '

              '
            - export CONF_JBOSS_REPO_BASE=
            - {Ref: ConfJBossRepoBase}
            - '

              '
            - export CONF_RHEL_REPO=
            - {Ref: ConfRHELRepoBase}
            - '

              '
            - export CONF_INSTALL_COMPONENTS="broker"
            - '

              '
            - /root/openshift-mod.sh "EIP=${CONF_BROKER_IP_ADDR}" MAX_RETRY=60 &
            - '

              '
  BSNIPAddress: {Type: 'AWS::EC2::EIP'}
  BSNIPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: {Ref: BSNInstance}
      EIP: {Ref: BSNIPAddress}
  BSNInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Fn::FindInMap: [JeosImages, Broker, Image]
      InstanceType: m1.small
      KeyName: {Ref: KeyName}
      SecurityGroups:
      - {Ref: OpenShiftEnterpriseSecurityGroup}
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - '-'
          - - openshift
            - {Ref: Prefix}
            - bsn
      UserData:
        Fn::Base64:
          Fn::Join:
          - ''
          - - '#!/bin/bash -x'
            - '

              '
            - export CONF_BROKER_IP_ADDR=
            - {Ref: BrokerIPAddress}
            - '

              '
            - export CONF_BSN_IP_ADDR=
            - {Ref: BSNIPAddress}
            - '

              '
            - export CONF_NODE1_IP_ADDR=
            - {Ref: Node1IPAddress}
            - '

              '
            - export CONF_NODE2_IP_ADDR=
            - {Ref: Node2IPAddress}
            - '

              '
            - export CONF_NAMED_IP_ADDR=
            - {Ref: BSNIPAddress}
            - '

              '
            - export CONF_DOMAIN=
            - {Ref: Prefix}
            - '

              '
            - export CONF_BROKER_HOSTNAME=
            - {Ref: BrokerHostname}
            - '

              '
            - export CONF_BSN_HOSTNAME=
            - {Ref: BSNHostname}
            - '

              '
            - export CONF_NODE1_HOSTNAME=
            - {Ref: Node1Hostname}
            - '

              '
            - export CONF_NODE2_HOSTNAME=
            - {Ref: Node2Hostname}
            - '

              '
            - export CONF_NAMED_HOSTNAME=
            - {Ref: BSNHostname}
            - '

              '
            - export CONF_ACTIVEMQ_HOSTNAME=
            - {Ref: BSNHostname}
            - '

              '
            - export CONF_DATASTORE_HOSTNAME=
            - {Ref: BSNHostname}
            - '

              '
            - export PREFIX=
            - {Ref: Prefix}
            - '

              '
            - export CONF_INSTALL_METHOD=
            - {Ref: ConfInstallMethod}
            - '

              '
            - export CONF_SM_REG_NAME=
            - {Ref: ConfSMRegName}
            - '

              '
            - export CONF_SM_REG_PASS=
            - {Ref: ConfSMRegPass}
            - '

              '
            - export CONF_SM_REG_POOL=
            - {Ref: ConfSMRegPool}
            - '

              '
            - export CONF_RHN_REG_NAME=
            - {Ref: ConfRHNRegName}
            - '

              '
            - export CONF_RHN_REG_PASS=
            - {Ref: ConfRHNRegPass}
            - '

              '
            - export CONF_RHN_REG_ACTKEY=
            - {Ref: ConfRHNRegAK}
            - '

              '
            - export CONF_REPOS_BASE=
            - {Ref: ConfRepoBase}
            - '

              '
            - export CONF_JBOSS_REPO_BASE=
            - {Ref: ConfJBossRepoBase}
            - '

              '
            - export CONF_RHEL_REPO=
            - {Ref: ConfRHELRepoBase}
            - '

              '
            - export CONF_INSTALL_COMPONENTS="broker,named,datastore,activemq"
            - '

              '
            - export CONF_NAMED_ENTRIES="${CONF_BROKER_HOSTNAME}:${CONF_BROKER_IP_ADDR},${CONF_BSN_HOSTNAME}:${CONF_BSN_IP_ADDR},${CONF_NODE1_HOSTNAME}:${CONF_NODE1_IP_ADDR},${CONF_NODE2_HOSTNAME}:${CONF_NODE2_IP_ADDR}"
            - '

              '
            - /root/openshift-mod.sh "EIP=${CONF_BSN_IP_ADDR}" MAX_RETRY=100 &
            - '

              '
  Node1IPAddress: {Type: 'AWS::EC2::EIP'}
  Node1IPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: {Ref: Node1Instance}
      EIP: {Ref: Node1IPAddress}
  Node1Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Fn::FindInMap: [JeosImages, Node, Image]
      InstanceType: m1.small
      KeyName: {Ref: KeyName}
      SecurityGroups:
      - {Ref: OpenShiftEnterpriseSecurityGroup}
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - '-'
          - - openshift
            - {Ref: Prefix}
            - node
      UserData:
        Fn::Base64:
          Fn::Join:
          - ''
          - - '#!/bin/bash -x'
            - '

              '
            - export CONF_NODE_IP_ADDR=
            - {Ref: Node1IPAddress}
            - '

              '
            - export CONF_NAMED_IP_ADDR=
            - {Ref: BSNIPAddress}
            - '

              '
            - export CONF_DOMAIN=novalocal
            - '

              '
            - export CONF_NODE_HOSTNAME=
            - {Ref: Node1Hostname}
            - '

              '
            - export CONF_NAMED_HOSTNAME=
            - {Ref: BSNHostname}
            - '

              '
            - export CONF_ACTIVEMQ_HOSTNAME=
            - {Ref: BSNHostname}
            - '

              '
            - export CONF_DATASTORE_HOSTNAME=
            - {Ref: BSNHostname}
            - '

              '
            - export CONF_INSTALL_METHOD=
            - {Ref: ConfInstallMethod}
            - '

              '
            - export CONF_SM_REG_NAME=
            - {Ref: ConfSMRegName}
            - '

              '
            - export CONF_SM_REG_PASS=
            - {Ref: ConfSMRegPass}
            - '

              '
            - export CONF_SM_REG_POOL=
            - {Ref: ConfSMRegPool}
            - '

              '
            - export CONF_RHN_REG_NAME=
            - {Ref: ConfRHNRegName}
            - '

              '
            - export CONF_RHN_REG_PASS=
            - {Ref: ConfRHNRegPass}
            - '

              '
            - export CONF_RHN_REG_ACTKEY=
            - {Ref: ConfRHNRegAK}
            - '

              '
            - export CONF_REPOS_BASE=
            - {Ref: ConfRepoBase}
            - '

              '
            - export CONF_JBOSS_REPO_BASE=
            - {Ref: ConfJBossRepoBase}
            - '

              '
            - export CONF_RHEL_REPO=
            - {Ref: ConfRHELRepoBase}
            - '

              '
            - export CONF_INSTALL_COMPONENTS=node
            - '

              '
            - /root/openshift-mod.sh "EIP=${CONF_NODE_IP_ADDR}" MAX_RETRY=60
            - '

              '
  Node2IPAddress: {Type: 'AWS::EC2::EIP'}
  Node2IPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: {Ref: Node2Instance}
      EIP: {Ref: Node2IPAddress}
  Node2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Fn::FindInMap: [JeosImages, Node, Image]
      InstanceType: m1.small
      KeyName: {Ref: KeyName}
      SecurityGroups:
      - {Ref: OpenShiftEnterpriseSecurityGroup}
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - '-'
          - - openshift
            - {Ref: Prefix}
            - node
      UserData:
        Fn::Base64:
          Fn::Join:
          - ''
          - - '#!/bin/bash -x'
            - '

              '
            - export CONF_NODE_IP_ADDR=
            - {Ref: Node2IPAddress}
            - '

              '
            - export CONF_NAMED_IP_ADDR=
            - {Ref: BSNIPAddress}
            - '

              '
            - export CONF_DOMAIN=novalocal
            - '

              '
            - export CONF_NODE_HOSTNAME=
            - {Ref: Node2Hostname}
            - '

              '
            - export CONF_NAMED_HOSTNAME=
            - {Ref: BSNHostname}
            - '

              '
            - export CONF_ACTIVEMQ_HOSTNAME=
            - {Ref: BSNHostname}
            - '

              '
            - export CONF_DATASTORE_HOSTNAME=
            - {Ref: BSNHostname}
            - '

              '
            - export CONF_INSTALL_METHOD=
            - {Ref: ConfInstallMethod}
            - '

              '
            - export CONF_SM_REG_NAME=
            - {Ref: ConfSMRegName}
            - '

              '
            - export CONF_SM_REG_PASS=
            - {Ref: ConfSMRegPass}
            - '

              '
            - export CONF_SM_REG_POOL=
            - {Ref: ConfSMRegPool}
            - '

              '
            - export CONF_RHN_REG_NAME=
            - {Ref: ConfRHNRegName}
            - '

              '
            - export CONF_RHN_REG_PASS=
            - {Ref: ConfRHNRegPass}
            - '

              '
            - export CONF_RHN_REG_ACTKEY=
            - {Ref: ConfRHNRegAK}
            - '

              '
            - export CONF_REPOS_BASE=
            - {Ref: ConfRepoBase}
            - '

              '
            - export CONF_JBOSS_REPO_BASE=
            - {Ref: ConfJBossRepoBase}
            - '

              '
            - export CONF_RHEL_REPO=
            - {Ref: ConfRHELRepoBase}
            - '

              '
            - export CONF_INSTALL_COMPONENTS=node
            - '

              '
            - /root/openshift-mod.sh "EIP=${CONF_NODE_IP_ADDR}" MAX_RETRY=60 &
            - '

              '
Outputs:
  OpenShiftConsole:
    Value:
      Fn::Join:
      - ''
      - - https://
        - Fn::GetAtt: [BrokerInstance, PublicIp]
        - /console
    Description: URL for OpenShift Origins console
  NameServerEntry:
    Value:
      Fn::Join:
      - ''
      - - 'nameserver '
        - Fn::GetAtt: [BrokerInstance, PublicIp]
    Description: Entry to insert into /etc/resolv.conf for application
      host names to resolve
